docs: fix en cdn.yaml
Signed-off-by: zzy987 <67889264+zzy987@users.noreply.github.com>

--- a/docs/en/config/cdn.yaml
+++ b/docs/en/config/cdn.yaml
@@ -19,13 +19,13 @@ base:
   # default: 1G, in format of G(B)/g/M(B)/m/K(B)/k/B, pure number will also be parsed as Byte.
   maxBandwidth: 1G
 
-  # CDN 暴露给 p2p 网络中的其他 peer 的 IP 地址
-  # 默认值：首个非本地回环IP。
+  # AdvertiseIP is used to set the ip that we advertise to other peer in the p2p-network.
+  # By default, the first non-loop address is advertised.
   advertiseIP:
 
-  # CDN 请求某个 URL 失败后，不再对该 URL 发起请求的时间间隔长度
-  # 换句话说，如果一个回源下载任务失败了，在这段时间里它将不会被重试。
-  # 默认值：3m
+  # FailAccessInterval is the interval time after failed to access the URL.
+  # If a task failed to be downloaded from the source, it will not be retried in the time since the last failure.
+  # default: 3m
   failAccessInterval: 3m
 
   # GCInitialDelay is the delay time from the start to the first GC execution.
