--- a/docs/en/config/cdn.yaml
+++ b/docs/en/config/cdn.yaml
@@ -61,7 +61,7 @@ plugins:
     - name: disk
       enable: true
       config:
-        baseDir: /Users/Zhangzheyi/ftp
+        baseDir: /Users/${USER_HOME}/ftp
     - name: memory
       enable: false
       config:
