--- a/docs/en/config/scheduler.yaml
+++ b/docs/en/config/scheduler.yaml
@@ -1,29 +1,133 @@
 # This file is the template of scheduler configuration file.
 # You can configure your scheduler by change the parameter according your requirement.
----
-debug: false
 
+# scheduler policy configuration
+scheduler:
+  # abtest if open abtest
+  # default: false
+  abtest: false
+  # ascheduler
+  ascheduler:
+  # bscheduler
+  bscheduler:
+  # workerNum
+  # default:
+  workerNum: 12
+  # backSourceCount
+  # default:
+  backSourceCount: 3
+  # accessWindow
+  # default:
+  accessWindow: 3m
+  # candidateParentCount
+  # default: 1
+  candidateParentCount: 1
+  # scheduler
+  # default: basic
+  scheduler: basic
+  # cdnLoad
+  # default:
+  cdnLoad: 100
+  # clientLoad
+  # default:
+  clientLoad: 10
+  # clientLoad
+  # default:
+  openMonitor: false
+  # gc
+  gc:
+    # peerGCInterval
+    peerGCInterval: 1m
+    # peerTTL
+    peerTTL: 10m
+    # peerTTI
+    peerTTI: 3m
+    # taskGCInterval
+    taskGCInterval: 1m
+    # taskTTL
+    taskTTL: 10m
+    # taskTTI
+    taskTTI: 3m
+
+# server configuration
 server:
+  # ip
+  ip:
+  # host
+  host:
   # ListenPort is the ip and port scheduler server listens on.
   # default: 8002
-  port: 8002
+  port:
 
-scheduler:
-
-worker:
-  worker-num: 1
-  worker-job-pool-size: 10000
-  sender-num: 10
-  sender-job-pool-size: 10000
-
-cdn:
-  servers:
-    - name: "B-M75UMD6M-2153.local"
-      ip: "127.0.0.1"
-      rpc-port: 8003
-      download-port: 8001
+# dynamic data configuration
+dynConfig:
+  # type
+  type:
+  # expireTime
+  expireTime:
+  # cdnDirPath
+  cdnDirPath:
+  # data
+  data: ""
 
 # manager configuration
 manager:
+  # addr
   addr: 127.0.0.1:65003
+  # schedulerClusterID
   schedulerClusterID: 1
+  # keepAlive
+  keepAlive:
+    # interval
+    interval: ""
+
+# host configuration
+host:
+  # location
+  location: ""
+  # idc
+  idc: ""
+
+# job configuration
+job:
+  # globalWorkerNum
+  globalWorkerNum: 2
+  # schedulerWorkerNum
+  schedulerWorkerNum: 3
+  # localWorkerNum
+  localWorkerNum: 3
+  # redis
+  redis:
+    # host
+    host: fff
+    # port
+    port: 33
+    # password
+    password: ""
+    # brokerDB
+    brokerDB: ""
+    # backendDB
+    backendDB: ""
+
+# Whether to disable CDN
+# default: false
+disableCDN: false
+
+# Console shows log on console
+# default: false
+console: false
+
+# Whether to enable debug level logger and enable pprof
+# default: false
+verbose: false
+
+# listen port for pprof, only valid when the verbose option is true
+# default is -1. If it is 0, pprof will use a random port.
+pprofPort: -1
+
+# jaeger endpoint url
+jaeger:
+
+# service name used in tracer
+# default: dragonfly-scheduler
+service-name: dragonfly-scheduler
