--- a/.github/workflows/compatibility-e2e.yml
+++ b/.github/workflows/compatibility-e2e.yml
@@ -1,4 +1,4 @@
-name: E2E Test
+name: Compatibility E2E Test
 
 on:
   push:
@@ -12,8 +12,10 @@ env:
   CONTAINERD_VERSION: v1.5.2
   GOPROXY: https://goproxy.io,direct
   KIND_CONFIG_PATH: test/testdata/kind/config.yaml
+  DRAGONFLY_E2E_TEST_MODE: compatibility
+  DRAGONFLY_DFDAEMON_IMAGE: dragonflyoss/dfdaemon:v0.4.0
   DRAGONFLY_CHARTS_PATH: deploy/helm-charts/charts/dragonfly
-  DRAGONFLY_CHARTS_CONFIG_PATH: test/testdata/charts/config.yaml
+  DRAGONFLY_CHARTS_CONFIG_PATH: test/testdata/charts/compatibility-config.yaml
   DRAGONFLY_FILE_SERVER_PATH: test/testdata/k8s/file-server.yaml
 
 jobs:
@@ -59,10 +61,18 @@ jobs:
           config: ${{ env.KIND_CONFIG_PATH }}
 
       - name: Build images
-        run: make docker-build
+        run: |
+          make docker-build-manager
+          make docker-build-cdn
+          make docker-build-scheduler
+          docker pull ${{ env.DRAGONFLY_DFDAEMON_IMAGE }}
 
       - name: Prepare kind environment
-        run: make kind-load
+        run: |
+          make kind-load-manager
+          make kind-load-cdn
+          make kind-load-scheduler
+          kind load docker-image ${{ env.DRAGONFLY_DFDAEMON_IMAGE }}
 
       - name: Setup dragonfly
         run: |
@@ -70,7 +80,7 @@ jobs:
           kubectl apply -f ${{ env.DRAGONFLY_FILE_SERVER_PATH }}
           kubectl wait po file-server-0 --namespace dragonfly-e2e --for=condition=ready --timeout=10m
 
-      - name: Run E2E test
+      - name: Run compatibility E2E test
         run: make actions-e2e-test-coverage
 
       - name: Upload coverage to Codecov
@@ -78,7 +88,7 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           files: ./coverage.txt
-          flags: e2etests
+          flags: compatibility-e2etests
 
       - name: Upload Logs
         uses: actions/upload-artifact@v2
