--- a/.github/workflows/compatibility-e2e.yml
+++ b/.github/workflows/compatibility-e2e.yml
@@ -13,9 +13,9 @@ env:
   GOPROXY: https://goproxy.io,direct
   KIND_CONFIG_PATH: test/testdata/kind/config.yaml
   DRAGONFLY_E2E_TEST_MODE: compatibility
-  DRAGONFLY_DFDAEMON_IMAGE: dragonflyoss/dfdaemon:v0.4.0
+  DRAGONFLY_DFDAEMON_IMAGE_TAG: v0.4.0
   DRAGONFLY_CHARTS_PATH: deploy/helm-charts/charts/dragonfly
-  DRAGONFLY_CHARTS_CONFIG_PATH: test/testdata/charts/compatibility-config.yaml
+  DRAGONFLY_CHARTS_CONFIG_PATH: test/testdata/charts/config.yaml
   DRAGONFLY_FILE_SERVER_PATH: test/testdata/k8s/file-server.yaml
 
 jobs:
@@ -34,6 +34,9 @@ jobs:
 
   e2e_tests:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        module: ["manager", "scheduler", "cdn", "dfdaemon"]
     needs: skip_check
     if: needs.skip_check.outputs.noop != 'true'
 
@@ -60,35 +63,18 @@ jobs:
           version: ${{ env.KIND_VERSION }}
           config: ${{ env.KIND_CONFIG_PATH }}
 
-      - name: Build images
+      - name: Run compatibility E2E test
+        env:
+          MODULE: ${{ matrix.module }}
         run: |
-          make docker-build-manager
-          make docker-build-cdn
-          make docker-build-scheduler
-          docker pull ${{ env.DRAGONFLY_DFDAEMON_IMAGE }}
-
-      - name: Prepare kind environment
-        run: |
-          make kind-load-manager
-          make kind-load-cdn
-          make kind-load-scheduler
-          kind load docker-image ${{ env.DRAGONFLY_DFDAEMON_IMAGE }}
-
-      - name: Setup dragonfly
-        run: |
-          helm install --wait --timeout 10m --dependency-update --create-namespace --namespace dragonfly-system -f ${{ env.DRAGONFLY_CHARTS_CONFIG_PATH }} dragonfly ${{ env.DRAGONFLY_CHARTS_PATH }}
+          make docker-build
+          make kind-load
+          docker pull dragonflyoss${{ env.MODULE }}:${{ env.DRAGONFLY_DFDAEMON_IMAGE_TAG }}
+          kind load docker-image dragonflyoss${{ env.MODULE }}:${{ env.DRAGONFLY_DFDAEMON_IMAGE_TAG }}
+          helm install --wait --timeout 10m --dependency-update --create-namespace --namespace dragonfly-system --set ${{ env.MODULE }}.tag=${{ env.DRAGONFLY_DFDAEMON_IMAGE_TAG }} -f ${{ env.DRAGONFLY_CHARTS_CONFIG_PATH }} dragonfly ${{ env.DRAGONFLY_CHARTS_PATH }}
           kubectl apply -f ${{ env.DRAGONFLY_FILE_SERVER_PATH }}
           kubectl wait po file-server-0 --namespace dragonfly-e2e --for=condition=ready --timeout=10m
-
-      - name: Run compatibility E2E test
-        run: make actions-e2e-test-coverage
-
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v1
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          files: ./coverage.txt
-          flags: compatibility-e2etests
+          make actions-e2e-test-coverage
 
       - name: Upload Logs
         uses: actions/upload-artifact@v2
