--- a/.github/workflows/compatibility-e2e.yml
+++ b/.github/workflows/compatibility-e2e.yml
@@ -69,12 +69,12 @@ jobs:
         run: |
           make docker-build
           make kind-load
-          docker pull dragonflyoss${{ env.MODULE }}:${{ env.DRAGONFLY_DFDAEMON_IMAGE_TAG }}
+          docker pull dragonflyoss/${{ env.MODULE }}:${{ env.DRAGONFLY_DFDAEMON_IMAGE_TAG }}
           kind load docker-image dragonflyoss${{ env.MODULE }}:${{ env.DRAGONFLY_DFDAEMON_IMAGE_TAG }}
           helm install --wait --timeout 10m --dependency-update --create-namespace --namespace dragonfly-system --set ${{ env.MODULE }}.tag=${{ env.DRAGONFLY_DFDAEMON_IMAGE_TAG }} -f ${{ env.DRAGONFLY_CHARTS_CONFIG_PATH }} dragonfly ${{ env.DRAGONFLY_CHARTS_PATH }}
           kubectl apply -f ${{ env.DRAGONFLY_FILE_SERVER_PATH }}
           kubectl wait po file-server-0 --namespace dragonfly-e2e --for=condition=ready --timeout=10m
-          make actions-e2e-test-coverage
+          make actions-e2e-test
 
       - name: Upload Logs
         uses: actions/upload-artifact@v2
