--- a/.github/workflows/compatibility-e2e.yml
+++ b/.github/workflows/compatibility-e2e.yml
@@ -12,8 +12,7 @@ env:
   CONTAINERD_VERSION: v1.5.2
   GOPROXY: https://goproxy.io,direct
   KIND_CONFIG_PATH: test/testdata/kind/config.yaml
-  DRAGONFLY_E2E_TEST_MODE: compatibility
-  DRAGONFLY_DFDAEMON_IMAGE_TAG: v0.4.0
+  DRAGONFLY_STABLE_IMAGE_TAG: v0.4.0
   DRAGONFLY_CHARTS_PATH: deploy/helm-charts/charts/dragonfly
   DRAGONFLY_CHARTS_CONFIG_PATH: test/testdata/charts/config.yaml
   DRAGONFLY_FILE_SERVER_PATH: test/testdata/k8s/file-server.yaml
@@ -32,7 +31,8 @@ jobs:
           paths_ignore: '["**.md", "**.png", "**.jpg", "**.svg"]'
           do_not_skip: '["pull_request", "workflow_dispatch", "schedule"]'
 
-  e2e_tests:
+  compatibility_e2e_tests:
+    name: compatibility e2e tests with ${{ matrix.module }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -63,18 +63,33 @@ jobs:
           version: ${{ env.KIND_VERSION }}
           config: ${{ env.KIND_CONFIG_PATH }}
 
-      - name: Run compatibility E2E test
-        env:
-          MODULE: ${{ matrix.module }}
+      - name: Build images
         run: |
           make docker-build
+          docker pull dragonflyoss/${{ matrix.module }}:${{ env.DRAGONFLY_STABLE_IMAGE_TAG }}
+
+      - name: Prepare kind environment
+        run: |
           make kind-load
-          docker pull dragonflyoss/${{ env.MODULE }}:${{ env.DRAGONFLY_DFDAEMON_IMAGE_TAG }}
-          kind load docker-image dragonflyoss${{ env.MODULE }}:${{ env.DRAGONFLY_DFDAEMON_IMAGE_TAG }}
-          helm install --wait --timeout 10m --dependency-update --create-namespace --namespace dragonfly-system --set ${{ env.MODULE }}.tag=${{ env.DRAGONFLY_DFDAEMON_IMAGE_TAG }} -f ${{ env.DRAGONFLY_CHARTS_CONFIG_PATH }} dragonfly ${{ env.DRAGONFLY_CHARTS_PATH }}
+          kind load docker-image dragonflyoss/${{ matrix.module }}:${{ env.DRAGONFLY_STABLE_IMAGE_TAG }}
+
+      - name: Setup dragonfly
+        run: |
+          helm install --wait --timeout 10m --dependency-update --create-namespace --namespace dragonfly-system --set ${{ matrix.module }}.tag=${{ env.DRAGONFLY_STABLE_IMAGE_TAG }} -f ${{ env.DRAGONFLY_CHARTS_CONFIG_PATH }} dragonfly ${{ env.DRAGONFLY_CHARTS_PATH }}
           kubectl apply -f ${{ env.DRAGONFLY_FILE_SERVER_PATH }}
           kubectl wait po file-server-0 --namespace dragonfly-e2e --for=condition=ready --timeout=10m
-          make actions-e2e-test
+
+      - name: Run E2E test
+        env:
+          DRAGONFLY_COMPATIBILITY_E2E_TEST_MODE: ${{ matrix.module }}
+        run: make actions-e2e-test-coverage
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./coverage.txt
+          flags: ${{ matrix }}-compatibility-e2etests
 
       - name: Upload Logs
         uses: actions/upload-artifact@v2
