--- a/.github/workflows/compatibility-e2e.yml
+++ b/.github/workflows/compatibility-e2e.yml
@@ -32,7 +32,7 @@ jobs:
           do_not_skip: '["pull_request", "workflow_dispatch", "schedule"]'
 
   compatibility_e2e_tests:
-    name: ${{ matrix.module }}
+    name: e2e_tests_with_${{ matrix.module }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -79,7 +79,7 @@ jobs:
           kubectl apply -f ${{ env.DRAGONFLY_FILE_SERVER_PATH }}
           kubectl wait po file-server-0 --namespace dragonfly-e2e --for=condition=ready --timeout=10m
 
-      - name: Run E2E test
+      - name: Run Compatibility E2E test
         env:
           DRAGONFLY_COMPATIBILITY_E2E_TEST_MODE: ${{ matrix.module }}
         run: make actions-e2e-test-coverage
