--- a/.github/workflows/compatibility-e2e.yml
+++ b/.github/workflows/compatibility-e2e.yml
@@ -12,10 +12,9 @@ env:
   CONTAINERD_VERSION: v1.5.2
   GOPROXY: https://goproxy.io,direct
   KIND_CONFIG_PATH: test/testdata/kind/config.yaml
-  DRAGONFLY_E2E_TEST_MODE: compatibility
-  DRAGONFLY_DFDAEMON_IMAGE: dragonflyoss/dfdaemon:v0.4.0
+  DRAGONFLY_STABLE_IMAGE_TAG: v0.4.0
   DRAGONFLY_CHARTS_PATH: deploy/helm-charts/charts/dragonfly
-  DRAGONFLY_CHARTS_CONFIG_PATH: test/testdata/charts/compatibility-config.yaml
+  DRAGONFLY_CHARTS_CONFIG_PATH: test/testdata/charts/config.yaml
   DRAGONFLY_FILE_SERVER_PATH: test/testdata/k8s/file-server.yaml
 
 jobs:
@@ -32,8 +31,12 @@ jobs:
           paths_ignore: '["**.md", "**.png", "**.jpg", "**.svg"]'
           do_not_skip: '["pull_request", "workflow_dispatch", "schedule"]'
 
-  e2e_tests:
+  compatibility_e2e_tests:
+    name: e2e_tests_with_${{ matrix.module }}
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        module: ["manager", "scheduler", "cdn", "dfdaemon"]
     needs: skip_check
     if: needs.skip_check.outputs.noop != 'true'
 
@@ -62,25 +65,23 @@ jobs:
 
       - name: Build images
         run: |
-          make docker-build-manager
-          make docker-build-cdn
-          make docker-build-scheduler
-          docker pull ${{ env.DRAGONFLY_DFDAEMON_IMAGE }}
+          make docker-build
+          docker pull dragonflyoss/${{ matrix.module }}:${{ env.DRAGONFLY_STABLE_IMAGE_TAG }}
 
       - name: Prepare kind environment
         run: |
-          make kind-load-manager
-          make kind-load-cdn
-          make kind-load-scheduler
-          kind load docker-image ${{ env.DRAGONFLY_DFDAEMON_IMAGE }}
+          make kind-load
+          kind load docker-image dragonflyoss/${{ matrix.module }}:${{ env.DRAGONFLY_STABLE_IMAGE_TAG }}
 
       - name: Setup dragonfly
         run: |
-          helm install --wait --timeout 10m --dependency-update --create-namespace --namespace dragonfly-system -f ${{ env.DRAGONFLY_CHARTS_CONFIG_PATH }} dragonfly ${{ env.DRAGONFLY_CHARTS_PATH }}
+          helm install --wait --timeout 10m --dependency-update --create-namespace --namespace dragonfly-system --set ${{ matrix.module }}.tag=${{ env.DRAGONFLY_STABLE_IMAGE_TAG }} --set ${{ matrix.module }}.image=dragonflyoss/${{ matrix.module }} -f ${{ env.DRAGONFLY_CHARTS_CONFIG_PATH }} dragonfly ${{ env.DRAGONFLY_CHARTS_PATH }}
           kubectl apply -f ${{ env.DRAGONFLY_FILE_SERVER_PATH }}
           kubectl wait po file-server-0 --namespace dragonfly-e2e --for=condition=ready --timeout=10m
 
-      - name: Run compatibility E2E test
+      - name: Run Compatibility E2E test
+        env:
+          DRAGONFLY_COMPATIBILITY_E2E_TEST_MODE: ${{ matrix.module }}
         run: make actions-e2e-test-coverage
 
       - name: Upload coverage to Codecov
@@ -88,11 +89,11 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           files: ./coverage.txt
-          flags: compatibility-e2etests
+          flags: ${{ matrix }}-compatibility-e2etests
 
       - name: Upload Logs
         uses: actions/upload-artifact@v2
         if: failure()
         with:
-          name: dragonfly-logs
+          name: ${{ matrix.module }}-compatibility-e2e-tests-logs
           path: /tmp/artifact/
