feat:scheduler docs
Signed-off-by: santong <244372610@qq.com>

--- a/docs/en/config/scheduler.yaml
+++ b/docs/en/config/scheduler.yaml
@@ -96,7 +96,7 @@ job:
   schedulerWorkerNum: 3
   # localWorkerNum
   localWorkerNum: 3
-  # redis
+  # redis configuration
   redis:
     # host
     host: fff
