feat: scheduler config
Signed-off-by: santong <244372610@qq.com>

--- a/docs/en/config/scheduler.yaml
+++ b/docs/en/config/scheduler.yaml
@@ -6,11 +6,15 @@ scheduler:
   # abtest if open abtest
   # default: false
   abtest: false
-  # ascheduler
-  ascheduler:
-  # bscheduler
-  bscheduler:
-  # workerNum
+  # aevaluator specify which evaluator is used when taskID suffix with _A
+  # only take effect when abtest is true
+  # default: ""
+  aevaluator: ""
+  # bevaluator specify which evaluator is used when taskID suffix with _B
+  # only take effect when abtest is true
+  # default: ""
+  bevaluator: ""
+  # workerNum is work num of
   # default:
   workerNum: 12
   # backSourceCount
