--- a/docs/zh-CN/config/cdn.yaml
+++ b/docs/zh-CN/config/cdn.yaml
@@ -104,15 +104,15 @@ plugins:
               cleanRatio: 3
               intervalThreshold: 2h0m0s
 
-# 是否在控制台程序中显示日志。
+# 是否在控制台程序中显示日志
 # 默认值：false
 console: false
 
-# 是否使用调试级别的日志、是否启用 pprof。
+# 是否使用调试级别的日志、是否启用 pprof
 # 默认值：false
 verbose: false
 
-# pprof 监听的端口，仅在 verbose 为 true 时可用。
+# pprof 监听的端口，仅在 verbose 为 true 时可用
 # 默认值：-1（表示不启动），为 0 时使用随机值
 pprofPort: -1
 
