--- a/docs/en/config/scheduler.yaml
+++ b/docs/en/config/scheduler.yaml
@@ -3,7 +3,7 @@
 
 # scheduler policy configuration
 scheduler:
-  # abtest if open abtest
+  # abtest whether to open ab test
   # default: false
   abtest: false
   # aevaluator specify which evaluator is used when taskID suffix with _A
@@ -14,43 +14,43 @@ scheduler:
   # only take effect when abtest is true
   # default: ""
   bevaluator: ""
-  # workerNum is work num of
+  # workerNum is the number of goroutines that perform scheduling tasks
   # default:
   workerNum: 12
-  # backSourceCount
-  # default:
+  # backSourceCount is the number of back-to-origin clients when the CDN is disable or unavailable
+  # default: 3
   backSourceCount: 3
-  # accessWindow
-  # default:
+  # accessWindow is access interval window that can trigger CDN back to the source again
+  # default: 3m
   accessWindow: 3m
-  # candidateParentCount
-  # default: 1
-  candidateParentCount: 1
-  # scheduler
+  # candidateParentCount is number of candidate parent nodes
+  # default: 10
+  candidateParentCount: 10
+  # scheduler is currently effective scheduling policy
   # default: basic
   scheduler: basic
-  # cdnLoad
-  # default:
+  # cdnLoad is CDN host can provide the maximum upload load
+  # default: 100
   cdnLoad: 100
-  # clientLoad
-  # default:
+  # clientLoad is client host can provide the maximum upload load
+  # default: 10
   clientLoad: 10
-  # clientLoad
-  # default:
+  # openMonitor Whether to enable monitoring, currently only the current peer list status information is monitored
+  # default: false
   openMonitor: false
-  # gc
+  # gc metadata configuration
   gc:
-    # peerGCInterval
+    # peerGCInterval peer's gc interval
     peerGCInterval: 1m
-    # peerTTL
+    # peerTTL peer's TTL duration
     peerTTL: 10m
-    # peerTTI
+    # peerTTI peer's TTI duration
     peerTTI: 3m
-    # taskGCInterval
+    # taskGCInterval task's gc interval
     taskGCInterval: 1m
-    # taskTTL
+    # taskTTL task's TTL duration
     taskTTL: 10m
-    # taskTTI
+    # taskTTI task's TTI duration
     taskTTI: 3m
 
 # server configuration
@@ -103,9 +103,9 @@ job:
   # redis configuration
   redis:
     # host
-    host: fff
+    host: ""
     # port
-    port: 33
+    port:
     # password
     password: ""
     # brokerDB
@@ -130,7 +130,8 @@ verbose: false
 pprofPort: -1
 
 # jaeger endpoint url
-jaeger:
+# default: ""
+jaeger: ""
 
 # service name used in tracer
 # default: dragonfly-scheduler
