feat: add piece download timeout
Signed-off-by: Gaius <gaius.qi@gmail.com>

--- a/client/config/testdata/config/daemon.yaml
+++ b/client/config/testdata/config/daemon.yaml
@@ -18,6 +18,7 @@ host:
   netTopology: d7y
 
 download:
+  pieceDownloadTimeout: 30s
   totalRateLimit: 200Mi
   perPeerRateLimit: 20Mi
   downloadGRPC:
