--- a/docs/zh-CN/config/cdn.yaml
+++ b/docs/zh-CN/config/cdn.yaml
@@ -1,81 +1,125 @@
-# 这个文件是 CDN 系统的配置模版
-# 你可以通过修改这里的配置项来自定义你的 CDN 系统
----
-base:  # 基础配置项
-  # listenPort cdn 服务的监听端口.
-  # default: 8003
+# CDN 配置模版
+# 你可以通过修改这里的配置项来自定义你的 CDN
+base:
+  # CDN 服务监听的端口
+  # 默认值：8003
   listenPort: 8003
 
-  # DownloadPort CDN提供文件下载的端口.
-  # 你需要先启动一个文件服务器，并且该文件服务器监听该下载端口。.
-  # default: 8001
+  # CDN 提供文件下载服务的端口
+  # 你需要先启动一个文件服务器，并且该文件服务器监听该下载端口。
+  # 默认值：8001
   downloadPort: 8001
 
-  # SystemReservedBandwidth is the network bandwidth reserved for system software.
-  # default: 20 MB, in format of G(B)/g/M(B)/m/K(B)/k/B, pure number will also be parsed as Byte.
+  # 为系统软件预留的网络带宽
+  # 接收的输入格式以 G(B)/g/M(B)/m/K(B)/k/B 结尾作为单位。如果您输入一个不带单位的整数，它的单位会被认为是 B(Byte)。
+  # 默认值：20 MB
   systemReservedBandwidth: 20M
 
-  # MaxBandwidth is the network bandwidth that cdn can use.
-  # default: 1G, in format of G(B)/g/M(B)/m/K(B)/k/B, pure number will also be parsed as Byte.
+  # CDN 可以使用的最大网络带宽
+  # 接收的输入格式以 G(B)/g/M(B)/m/K(B)/k/B 结尾作为单位。如果您输入一个不带单位的整数，它的单位会被认为是 B(Byte)。
+  # 默认值：1G
   maxBandwidth: 1G
 
-  # FailAccessInterval is the interval time after failed to access the URL.
-  # If a task failed to be downloaded from the source, it will not be retried in the time since the last failure.
-  # default: 3m
+  # CDN 暴露给 p2p 网络中的其他 peer 的 IP 地址
+  # 默认值：首个非本地回环IP。
+  advertiseIP:
+
+  # CDN 请求某个 URL 失败后，不再对该 URL 发起请求的时间间隔长度
+  # 换句话说，如果一个回源下载任务失败了，在这段时间里它将不会被重试。
+  # 默认值：3m
   failAccessInterval: 3m
 
-  # GCInitialDelay is the delay time from the start to the first GC execution.
-  # default: 6s
+  # CDN 启动后到启动第一次垃圾回收的时间间隔
+  # 默认值：6s
   gcInitialDelay: 6s
 
-  # GCMetaInterval is the interval time to execute GC meta.
-  # default: 2m0s
+  # 进行元数据信息回收的时间间隔
+  # 每隔一个该时间间隔，CDN 就会启动一次元数据信息回收。
+  # 默认值：2m0s
   gcMetaInterval: 2m
 
-  # gcStorageInterval is the interval time to execute GC storage.
-  # default: 15s
-  gcStorageInterval: 15s
-
-  # TaskExpireTime when a task is not accessed within the taskExpireTime,
-  # and it will be treated to be expired.
-  # default: 3m0s
+  # 任务失效时间
+  # 如果一个任务的信息距离上次访问过去了一个该时间间隔，该任务信息将被认为已经失效。
+  # 默认值：3m0s
   taskExpireTime: 3m
 
-  # StoragePattern is the pattern of storage policy, [disk/hybrid]
-  storagePattern: disk
+  # CDN 使用的存储插件，可选[disk/hybrid]。disk 完全使用硬盘存储，hybrid 同时使用内存和硬盘进行存储。
+  # 默认值：disk
+  storageMode: disk
 
-plugins: # 插件配置
-  storage: # 存储插件配置
+  # CDN 连接的 manager，可以不指定。
+  # 各项配置默认值如下。如果 addr 为空字符串，CDN将不会连接manager。
+  manager:
+    addr: ""
+    cdnClusterID: 0
+    keepAlive:
+      interval: 5s
+
+  # 主机信息
+  host:
+    # 地理位置
+    location: ""
+    # IDC(Internet Data Center)，互联网数据中心
+    idc: ""
+
+plugins:
+  storagedriver:
     - name: disk
       enable: true
       config:
-        baseDir: /tmp/cdnsystem2
-        gcConfig:
-          youngGCThreshold: 100G
-          fullGCThreshold: 5G
-          cleanRatio: 1
-          intervalThreshold: 2h
+        baseDir: /Users/${USER_HOME}/ftp
     - name: memory
+      enable: false
+      config:
+        baseDir: /dev/shm/dragonfly
+  storagemanager:
+    - name: disk
       enable: true
       config:
-        baseDir: /tmp/memory/dragonfly
-        gcConfig:
-          youngGCThreshold: 100G
-          fullGCThreshold: 5G
-          cleanRatio: 3
-          intervalThreshold: 2h
+        gcInitialDelay: 0s
+        gcInterval: 15s
+        driverConfigs:
+          disk:
+            gcConfig:
+              youngGCThreshold: 100.0GB
+              fullGCThreshold: 5.0GB
+              cleanRatio: 1
+              intervalThreshold: 2h0m0s
+    - name: hybrid
+      enable: false
+      config:
+        gcInitialDelay: 0s
+        gcInterval: 15s
+        driverConfigs:
+          disk:
+            gcConfig:
+              youngGCThreshold: 100.0GB
+              fullGCThreshold: 5.0GB
+              cleanRatio: 1
+              intervalThreshold: 2h0m0s
+          memory:
+            gcConfig:
+              youngGCThreshold: 100.0GB
+              fullGCThreshold: 5.0GB
+              cleanRatio: 3
+              intervalThreshold: 2h0m0s
 
-# Console shows log on console
-# default: false
+# 是否在控制台程序中显示日志
+# 默认值：false
 console: false
 
-# Whether to enable debug level logger and enable pprof
-# default: false
+# 是否使用调试级别的日志、是否启用 pprof
+# 默认值：false
 verbose: false
 
-# listen port for pprof, only valid when the verbose option is true
-# default is random port
-pprofPort: 0
+# pprof 监听的端口，仅在 verbose 为 true 时可用
+# 默认值：-1（表示不启动），为 0 时使用随机值
+pprofPort: -1
 
-# the service address that provides the configuration item
-configServer: 127.0.0.1:8004
+# jaeger 地址
+# 默认使用空字符串（不配置 jaeger）
+jaeger:
+
+# tracer 中使用的 service-name
+# 默认值：dragonfly-cdn
+service-name: dragonfly-cdn
