chore: skip workflows
Signed-off-by: Gaius <gaius.qi@gmail.com>

--- a/.github/workflows/compatibility-e2e.yml
+++ b/.github/workflows/compatibility-e2e.yml
@@ -28,7 +28,7 @@ jobs:
         uses: fkirc/skip-duplicate-actions@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          paths_ignore: '["**.md", "**.png", "**.jpg", "**.svg"]'
+          paths_ignore: '["**.md", "**.png", "**.jpg", "**.svg", "docs"]'
           do_not_skip: '["pull_request", "workflow_dispatch", "schedule"]'
 
   compatibility_e2e_tests:
