--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -27,7 +27,7 @@ jobs:
         uses: fkirc/skip-duplicate-actions@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          paths_ignore: '["**.md", "**.png", "**.jpg", "**.svg", "**/docs/**"]'
+          paths_ignore: '["**.md", "**.png", "**.jpg", "**.svg", "docs/**"]'
           do_not_skip: '["push", "workflow_dispatch", "schedule"]'
 
   e2e_tests:
