--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -33,7 +33,7 @@ jobs:
   e2e_tests:
     runs-on: ubuntu-latest
     needs: skip_check
-    if: needs.skip_check.outputs.noop != 'true'
+    if: ${{ needs.skip_check.outputs.should_skip != 'true' }}
 
     steps:
       - name: Checkout code
