--- a/docs/zh-CN/config/dfget.yaml
+++ b/docs/zh-CN/config/dfget.yaml
@@ -55,6 +55,8 @@ host:
 
 # 下载服务选项
 download:
+  # 是否计算文件摘要，设置为 false 的话，会节省内存
+  calculateDigest: true
   # 总下载限速
   totalRateLimit: 200Mi
   # 单个任务下载限速
