docs: scheduler config (#654)
* docs: scheduler config

Signed-off-by: Gaius <gaius.qi@gmail.com>

--- a/docs/en/config/scheduler.yaml
+++ b/docs/en/config/scheduler.yaml
@@ -61,7 +61,7 @@ server:
   host:
   # ListenPort is the ip and port scheduler server listens on.
   # default: 8002
-  port:
+  port: 8002
 
 # dynamic data configuration
 dynConfig:
@@ -72,7 +72,7 @@ dynConfig:
   # cdnDirPath
   cdnDirPath:
   # data
-  data: ""
+  data: {}
 
 # manager configuration
 manager:
