--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -3,8 +3,10 @@ name: E2E Test
 on:
   push:
     branches: [main, release-*]
+    paths-ignore: [ '**.md', '**.png', '**.jpg', '**.svg', '**/docs/**' ]
   pull_request:
     branches: [main, release-*]
+    paths-ignore: [ '**.md', '**.png', '**.jpg', '**.svg', '**/docs/**' ]
 
 env:
   GO_VERSION: 1.15
@@ -16,24 +18,8 @@ env:
   DRAGONFLY_FILE_SERVER_PATH: test/testdata/k8s/file-server.yaml
 
 jobs:
-  skip_check:
-    runs-on: ubuntu-latest
-    outputs:
-      should_skip: ${{ steps.skip_check.outputs.should_skip }}
-    steps:
-      - name: Skip Check
-        id: skip_check
-        uses: fkirc/skip-duplicate-actions@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          paths_ignore: '["**.md", "**.png", "**.jpg", "**.svg", "**/docs/**"]'
-          do_not_skip: '["push", "workflow_dispatch", "schedule"]'
-
   e2e_tests:
     runs-on: ubuntu-latest
-    needs: skip_check
-    if: ${{ needs.skip_check.outputs.should_skip != 'true' }}
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
