chore: workflows ignore paths
Signed-off-by: Gaius <gaius.qi@gmail.com>

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -3,8 +3,10 @@ name: CodeQL Analysis
 on:
   push:
     branches: [ main, release-* ]
+    paths-ignore: [ '**.md', '**.png', '**.jpg', '**.svg', '**/docs/**' ]
   pull_request:
     branches: [ main, release-* ]
+    paths-ignore: [ '**.md', '**.png', '**.jpg', '**.svg', '**/docs/**' ]
   schedule:
     - cron: '0 4 * * *'
 
