--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,26 +3,15 @@ name: CI
 on:
   push:
     branches: [ main, release-* ]
+    paths-ignore: [ '**.md', '**.png', '**.jpg', '**.svg', '**/docs/**' ]
   pull_request:
     branches: [ main, release-* ]
+    paths-ignore: [ '**.md', '**.png', '**.jpg', '**.svg', '**/docs/**' ]
 
 env:
   GO_VERSION: 1.15
 
 jobs:
-  lint:
-    name: Lint
-    timeout-minutes: 20
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Golangci lint
-        uses: golangci/golangci-lint-action@v2
-        with:
-          version: v1.40.1
-
   test:
     name: Test
     timeout-minutes: 20
@@ -50,7 +39,7 @@ jobs:
     name: Build
     timeout-minutes: 20
     runs-on: ubuntu-latest
-    needs: [lint, test]
+    needs: [test]
     steps:
       - name: Set up Go
         uses: actions/setup-go@v2
