docs: scheduler config
Signed-off-by: Gaius <gaius.qi@gmail.com>

--- a/docs/en/config/manager.yaml
+++ b/docs/en/config/manager.yaml
@@ -16,6 +16,8 @@ server:
   rest:
     # stand address
     addr: :8080
+  # front-end console resource path
+  # publicPath: /dist
 
 # database info used for server
 database:
