docs: remove redis host
Signed-off-by: Gaius <gaius.qi@gmail.com>

--- a/docs/zh-CN/config/scheduler.yaml
+++ b/docs/zh-CN/config/scheduler.yaml
@@ -96,7 +96,7 @@ job:
   # redis configuration
   redis:
     # host redis 服务实例地址
-    host: "redis"
+    host: ""
     # port redis 服务实例端口
     port: 6379
     # password
