--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -38,11 +38,11 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
+        uses: docker/login-action@v1 
         with:
-          registry: ghcr.io
+          registry: docker.pkg.github.com
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.CR_PAT }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
@@ -57,7 +57,7 @@ jobs:
             VERSION=${{ steps.get_version.outputs.VERSION }}
           tags: |
             dragonflyoss/scheduler:${{ steps.get_version.outputs.VERSION }}
-            ghcr.io/dragonflyoss/scheduler:${{ steps.get_version.outputs.VERSION }}
+            docker.pkg.github.com/${{ github.repository }}/scheduler:${{ steps.get_version.outputs.VERSION }}
           push: true
 
   push_dfdaemon_to_registry:
@@ -92,11 +92,11 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
+        uses: docker/login-action@v1 
         with:
-          registry: ghcr.io
+          registry: docker.pkg.github.com
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.CR_PAT }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
@@ -111,7 +111,7 @@ jobs:
             VERSION=${{ steps.get_version.outputs.VERSION }}
           tags: |
             dragonflyoss/dfdaemon:${{ steps.get_version.outputs.VERSION }}
-            ghcr.io/dragonflyoss/dfdaemon:${{ steps.get_version.outputs.VERSION }}
+            docker.pkg.github.com/${{ github.repository }}/dfdaemon:${{ steps.get_version.outputs.VERSION }}
           push: true
 
   push_cdn_to_registry:
@@ -146,11 +146,11 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
+        uses: docker/login-action@v1 
         with:
-          registry: ghcr.io
+          registry: docker.pkg.github.com
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.CR_PAT }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
@@ -165,7 +165,7 @@ jobs:
             VERSION=${{ steps.get_version.outputs.VERSION }}
           tags: |
             dragonflyoss/cdn:${{ steps.get_version.outputs.VERSION }}
-            ghcr.io/dragonflyoss/cdn:${{ steps.get_version.outputs.VERSION }}
+            docker.pkg.github.com/${{ github.repository }}/cdn:${{ steps.get_version.outputs.VERSION }}
           push: true
 
   push_manager_to_registry:
@@ -200,11 +200,11 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
+        uses: docker/login-action@v1 
         with:
-          registry: ghcr.io
+          registry: docker.pkg.github.com
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.CR_PAT }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
@@ -219,5 +219,5 @@ jobs:
             VERSION=${{ steps.get_version.outputs.VERSION }}
           tags: |
             dragonflyoss/manager:${{ steps.get_version.outputs.VERSION }}
-            ghcr.io/dragonflyoss/manager:${{ steps.get_version.outputs.VERSION }}
+            docker.pkg.github.com/${{ github.repository }}/manager:${{ steps.get_version.outputs.VERSION }}
           push: true
