--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -2,8 +2,11 @@ name: Docker
 
 on:
   push:
-    tags:
-      - v*
+    branches: [ main, release-* ]
+    paths-ignore: [ '**.md', '**.png', '**.jpg', '**.svg', '**/docs/**' ]
+  pull_request:
+    branches: [ main, release-* ]
+    paths-ignore: [ '**.md', '**.png', '**.jpg', '**.svg', '**/docs/**' ]
 
 jobs:
   push_scheduler_to_registry:
@@ -56,7 +59,7 @@ jobs:
             GITVERSION=git-${{ steps.vars.outputs.git_revision }}
             VERSION=${{ steps.get_version.outputs.VERSION }}
           tags: |
-            dragonflyoss/scheduler:${{ steps.get_version.outputs.VERSION }}
+            # dragonflyoss/scheduler:${{ steps.get_version.outputs.VERSION }}
             docker.pkg.github.com/${{ github.repository }}/scheduler:${{ steps.get_version.outputs.VERSION }}
           push: true
 
@@ -110,7 +113,7 @@ jobs:
             GITVERSION=git-${{ steps.vars.outputs.git_revision }}
             VERSION=${{ steps.get_version.outputs.VERSION }}
           tags: |
-            dragonflyoss/dfdaemon:${{ steps.get_version.outputs.VERSION }}
+            # dragonflyoss/dfdaemon:${{ steps.get_version.outputs.VERSION }}
             docker.pkg.github.com/${{ github.repository }}/dfdaemon:${{ steps.get_version.outputs.VERSION }}
           push: true
 
@@ -164,7 +167,7 @@ jobs:
             GITVERSION=git-${{ steps.vars.outputs.git_revision }}
             VERSION=${{ steps.get_version.outputs.VERSION }}
           tags: |
-            dragonflyoss/cdn:${{ steps.get_version.outputs.VERSION }}
+            # dragonflyoss/cdn:${{ steps.get_version.outputs.VERSION }}
             docker.pkg.github.com/${{ github.repository }}/cdn:${{ steps.get_version.outputs.VERSION }}
           push: true
 
@@ -218,6 +221,6 @@ jobs:
             GITVERSION=git-${{ steps.vars.outputs.git_revision }}
             VERSION=${{ steps.get_version.outputs.VERSION }}
           tags: |
-            dragonflyoss/manager:${{ steps.get_version.outputs.VERSION }}
+            # dragonflyoss/manager:${{ steps.get_version.outputs.VERSION }}
             docker.pkg.github.com/${{ github.repository }}/manager:${{ steps.get_version.outputs.VERSION }}
           push: true
