feat: kind artifact path
Signed-off-by: Gaius <gaius.qi@gmail.com>

--- a/test/testdata/kind/config.yaml
+++ b/test/testdata/kind/config.yaml
@@ -10,3 +10,5 @@ nodes:
     extraMounts:
       - hostPath: ./test/testdata/containerd/config.toml
         containerPath: /etc/containerd/config.toml
+      - hostPath: /tmp/artifact
+        containerPath: /tmp/artifact
