--- a/test/testdata/charts/config.yaml
+++ b/test/testdata/charts/config.yaml
@@ -1,14 +1,35 @@
 scheduler:
   image: d7yio/scheduler
   tag: latest
+  extraVolumeMounts:
+    - name: logs
+      mountPath: "/var/logs/dragonfly"
+  extraVolumes:
+    - name: logs
+      hostPath:
+        path: /tmp/artifact
 
 cdn:
   image: d7yio/cdn
   tag: latest
+  extraVolumeMounts:
+    - name: logs
+      mountPath: "/var/logs/dragonfly"
+  extraVolumes:
+    - name: logs
+      hostPath:
+        path: /tmp/artifact
 
 dfdaemon:
   image: d7yio/dfdaemon
   tag: latest
+  extraVolumeMounts:
+    - name: logs
+      mountPath: "/var/logs/dragonfly"
+  extraVolumes:
+    - name: logs
+      hostPath:
+        path: /tmp/artifact
   config:
     proxy:
       defaultFilter: "Expires&Signature"
@@ -29,3 +50,10 @@ dfdaemon:
 manager:
   image: d7yio/manager
   tag: latest
+  extraVolumeMounts:
+    - name: logs
+      mountPath: "/var/logs/dragonfly"
+  extraVolumes:
+    - name: logs
+      hostPath:
+        path: /tmp/artifact
