--- a/.github/workflows/compatibility-e2e.yml
+++ b/.github/workflows/compatibility-e2e.yml
@@ -78,7 +78,7 @@ jobs:
 
       - name: Upload Logs
         uses: actions/upload-artifact@v2
-        if: failure()
+        # if: failure()
         with:
           name: ${{ matrix.module }}-compatibility-e2e-tests-logs
           path: /tmp/artifact/
