--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -70,4 +70,4 @@ jobs:
         # if: failure()
         with:
           name: e2e-tests-logs
-          path: /tmp/artifact/
+          path: /tmp/artifact/**/*
