--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -70,4 +70,8 @@ jobs:
         # if: failure()
         with:
           name: e2e-tests-logs
-          path: /tmp/artifact/**/*.log
+          path: |
+            /tmp/artifact/manager/*.log
+            /tmp/artifact/daemon/*.log
+            /tmp/artifact/scheduler/*.log
+            /tmp/artifact/cdn/*.log
